# Codeforces

./: .gitignore  .gitmodules  .judge  CMakeLists.txt
1A/: a.out  judge.cc
509E/: main.cpp
519E/: main.cpp  makefile  run
609E/: judge.cc  main.cpp  makefile
609E/tests/: gen.py
problems/: CMakeLists.txt  Contest.cc  Solution.cc  Template.cc
problems/1A/: main.cc  main.cpp
problems/1A/tests/: 0.test  1.test  2.test  3.test  4.test
problems/4A/: main.cc
problems/4A/tests/: 0.test
problems/519E/: main.cc  main.cpp
problems/519E/tests/: 0.test  1.test  2.test  3.test  4.test  5.test
problems/609E/: main.cc  main.cpp  makefile
problems/609E/tests/: 0.test  1.test  2.test  3.test  4.test  5.test  6.test  7.test  8.test  t9.test
problems/750A/: main.cc
problems/750A/tests/: 0.test  1.test  2.test
problems/750B/: main.cc
problems/750B/tests/: 0.test  1.test  2.test  3.test  4.test
problems/750C/: main.cc
problems/750C/tests/: 0.test  1.test  2.test
problems/750D/: main.cc
problems/750D/tests/: 0.test  1.test  2.test  3.test
problems/753A/tests/: 0.test
problems/754A/: main.cc
problems/YandexContestE/tests/: 0.test  1.test
scripts/: build_and_test
